--- a/config.json
+++ b/config.json
@@ -1,213 +1,443 @@
 {
   "EXCLUDE_TITLE_KEYWORDS": [
-    "야구", "축구", "배구", "농구", "골프", "e스포츠", "올림픽", "월드컵", "K리그", "프로야구", "프로축구", "프로배구", "프로농구", "유도", "꿈나무", "올림픽", "탁구",
-    "부고", "부음", "인사", "승진", "임명", "발령", "인사발령", "인사이동",
-    "브랜드평판", "브랜드 평판", "브랜드 순위", "브랜드지수", "브랜드", "페스타", "페스티벌", "할인 행사", "서울거리", "폴리스라인", "상금", "경진대회",
-    "코스피", "코스닥", "주가", "주식", "증시", "시세", "마감", "장중", "장마감", "거래량", "거래대금", "상한가", "하한가",
-    "봉사", "후원", "기부", "우승", "무승부", "패배", "스포츠", "스폰서", "지속가능", "ESG", "위촉", "이벤트", "사전예약", "챔프전",
-    "프로모션", "연극", "공연", "어르신", "링컨", "에비에이터", "NH퍼플통장", "골라담기", "태극기", "공채", "메디컬테스트", "V리그", "김연경", "레베카",
-    "음악회", "교향악단", "사이버대", "신진서", "안성준", "GS칼텍스배", "프로기전", "다문화", "와인25플러스", "과채주스", "책Dream", "책드림", "트로페오",
-    "브랜드데이", "쇼핑라이브", "산학협력 컨퍼런스", "녹색상품", "소비자가 뽑은", "캠페인", "나눔", "챔피언십", "사회공헌", "성금", "캠프",
-    "테니스", "집중호우", "수해 복구", "온열질환", "출시", "금융교육", "유튜브 구독자", "김장", "취약계층", "할인행사", "안성재", "에너지음료", "문화교류"
+    "야구",
+    "축구",
+    "배구",
+    "농구",
+    "골프",
+    "e스포츠",
+    "올림픽",
+    "월드컵",
+    "K리그",
+    "프로야구",
+    "프로축구",
+    "프로배구",
+    "프로농구",
+    "유도",
+    "꿈나무",
+    "부고",
+    "부음",
+    "인사",
+    "승진",
+    "임명",
+    "발령",
+    "인사발령",
+    "인사이동",
+    "브랜드평판",
+    "브랜드 평판",
+    "브랜드 순위",
+    "브랜드지수",
+    "브랜드",
+    "프로모션",
+    "이벤트",
+    "페스티벌",
+    "축제",
+    "음악회",
+    "공연",
+    "연극",
+    "코스피",
+    "코스닥",
+    "주가",
+    "증시",
+    "시세",
+    "장중",
+    "장마감",
+    "거래량",
+    "상한가",
+    "하한가"
   ],
   "ALLOWED_SOURCES": [
-    "news.einfomax.co.kr", "yna.co.kr", "newsis.com", "mk.co.kr", "news1.kr", "mt.co.kr", "hankyung.com",
-    "joongang.co.kr", "chosun.com", "edaily.co.kr", "biz.heraldcorp.com", "kmib.co.kr", "seoul.co.kr",
-    "thebell.co.kr", "fnnews.com", "ichannela.com", "donga.com", "hani.co.kr", "news.jtbc.co.kr",
-    "khan.co.kr", "imnews.imbc.com", "mbn.co.kr", "news.sbs.co.kr", "tvchosun.com", "ytn.co.kr",
-    "biz.chosun.com", "media.naver.com", "ohmynews.com", "ajunews.com", "sedaily.com", "asiae.co.kr",
-    "hankookilbo.com", "nocutnews.co.kr", "bloter.net", "segye.com", "bizwatch.co.kr", "newsprime.co.kr",
-    "meconomynews.com", "newsway.co.kr"
+    "yna.co.kr",
+    "newsis.com",
+    "mk.co.kr",
+    "news1.kr",
+    "mt.co.kr",
+    "hankyung.com",
+    "joongang.co.kr",
+    "chosun.com",
+    "edaily.co.kr",
+    "biz.heraldcorp.com",
+    "kmib.co.kr",
+    "seoul.co.kr",
+    "thebell.co.kr",
+    "fnnews.com",
+    "ichannela.com",
+    "donga.com",
+    "hani.co.kr",
+    "news.jtbc.co.kr",
+    "khan.co.kr",
+    "imnews.imbc.com",
+    "mbn.co.kr",
+    "news.sbs.co.kr",
+    "tvchosun.com",
+    "ytn.co.kr",
+    "biz.chosun.com",
+    "asiae.co.kr",
+    "sedaily.com",
+    "hankookilbo.com",
+    "nocutnews.co.kr",
+    "segye.com",
+    "bizwatch.co.kr",
+    "newsprime.co.kr",
+    "newsway.co.kr",
+    "ajunews.com"
   ],
- "favorite_categories": {
+  "favorite_categories": {
     "PE/VC": [
-      "MBK", "IMM PE", "한앤코", "VIG파트너스", "H&Q", "스틱인베스트먼트",
-      "KKR", "Carlyle", "Blackstone", "Brookfield", "Macquarie", "TPG", "GIP", "Stonepeak",
-      "컨티뉴에이션 펀드", "세컨더리 펀드", "코인베스트", "셀다운", "리파이낸싱"
+      "MBK",
+      "IMM PE",
+      "한앤코",
+      "VIG파트너스",
+      "H&Q",
+      "스틱인베스트먼트",
+      "KKR",
+      "Carlyle",
+      "Blackstone",
+      "Brookfield",
+      "Macquarie",
+      "TPG",
+      "GIP",
+      "Stonepeak",
+      "컨티뉴에이션 펀드",
+      "세컨더리 펀드",
+      "코인베스트",
+      "셀다운",
+      "리파이낸싱"
     ],
     "부동산/리츠": [
-      "오피스 딜", "물류센터 매입", "리츠 상장", "리츠 인수", "롯데리츠", "신한서부티엔디리츠",
-      "NH올원리츠", "이지스자산운용", "마스턴투자운용", "코람코자산신탁", "자산유동화", "PF-ABS"
+      "오피스 딜",
+      "물류센터 매입",
+      "리츠 상장",
+      "리츠 인수",
+      "롯데리츠",
+      "신한서부티엔디리츠",
+      "NH올원리츠",
+      "이지스자산운용",
+      "마스턴투자운용",
+      "코람코자산신탁",
+      "자산유동화",
+      "PF-ABS"
     ],
     "인프라/에너지": [
-      "해상풍력", "태양광", "ESS", "연료전지", "수소충전소", "열병합", "송배전",
-      "PPA", "RE100", "REC", "민자발전", "민자 집단에너지", "장기전력구매계약"
+      "해상풍력",
+      "태양광",
+      "ESS",
+      "연료전지",
+      "수소충전소",
+      "열병합",
+      "송배전",
+      "PPA",
+      "RE100",
+      "REC",
+      "민자발전",
+      "민자 집단에너지",
+      "장기전력구매계약"
     ],
     "데이터센터/통신": [
-      "데이터센터", "IDC", "하이퍼스케일 DC", "코로케이션", "다크파이버", "해저케이블",
-      "엣지 데이터센터", "백본망", "캐리어 호텔"
+      "데이터센터",
+      "IDC",
+      "하이퍼스케일 DC",
+      "코로케이션",
+      "다크파이버",
+      "해저케이블",
+      "엣지 데이터센터",
+      "백본망",
+      "캐리어 호텔"
     ],
     "물류/항만": [
-      "항만터미널", "컨세션", "민자SOC", "택배허브", "콜드체인", "리퍼터미널", "ICD",
-      "철도물류", "복합물류센터", "FTZ"
+      "항만터미널",
+      "컨세션",
+      "민자SOC",
+      "택배허브",
+      "콜드체인",
+      "리퍼터미널",
+      "ICD",
+      "철도물류",
+      "복합물류센터",
+      "FTZ"
     ],
     "환경/폐기물/수처리": [
-      "소각장", "매립", "SRF", "MBT", "바이오가스", "하수처리", "상수도", "스마트미터",
-      "에코타운", "자원순환"
+      "소각장",
+      "매립",
+      "SRF",
+      "MBT",
+      "바이오가스",
+      "하수처리",
+      "상수도",
+      "스마트미터",
+      "에코타운",
+      "자원순환"
     ],
     "SOC/민자": [
-      "BTO", "BTL", "PPP", "PFI", "컨세션", "운영권 양수", "MRG", "수익공유", "리파이낸싱"
+      "BTO",
+      "BTL",
+      "PPP",
+      "PFI",
+      "컨세션",
+      "운영권 양수",
+      "MRG",
+      "수익공유",
+      "리파이낸싱"
     ],
     "항공/공항/철도": [
-      "공항터미널", "면세점 운영권", "공항 도시가스", "공항 수전", "철도역세권 개발",
-      "리스백", "슬롯", "공항 민영화"
+      "공항터미널",
+      "면세점 운영권",
+      "공항 도시가스",
+      "공항 수전",
+      "철도역세권 개발",
+      "리스백",
+      "슬롯",
+      "공항 민영화"
     ],
     "해외대체": [
-      "미국 데이터센터", "유럽 항만", "영국 오피스", "호주 요금규제자산", "유럽 재생에너지",
-      "브라질 송전", "중동 수소", "동남아 물류"
+      "미국 데이터센터",
+      "유럽 항만",
+      "영국 오피스",
+      "호주 요금규제자산",
+      "유럽 재생에너지",
+      "브라질 송전",
+      "중동 수소",
+      "동남아 물류"
     ],
     "연기금/LP": [
-      "국민연금 대체투자", "사학연금 대체투자", "공무원연금 대체투자",
-      "우정사업본부 대체투자", "행복기금 대체투자", "KIC 대체투자", "카이스트기금 대체"
+      "국민연금 대체투자",
+      "사학연금 대체투자",
+      "공무원연금 대체투자",
+      "우정사업본부 대체투자",
+      "행복기금 대체투자",
+      "KIC 대체투자",
+      "대학기금 대체"
     ]
   },
-  "excel_company_categories": {
+  "sector_filter_categories": {
     "PE/VC": [
-      "MBK", "IMM PE", "한앤코", "VIG파트너스", "H&Q", "스틱인베스트먼트",
-      "KKR", "Carlyle", "Blackstone", "Brookfield", "Macquarie", "TPG", "GIP", "Stonepeak",
-      "컨티뉴에이션 펀드", "세컨더리 펀드", "코인베스트", "셀다운", "리파이낸싱"
+      "인수",
+      "셀다운",
+      "공동투자",
+      "컨소시엄",
+      "리파이낸싱",
+      "RCF",
+      "Covenant",
+      "Leverage",
+      "유동성 지원",
+      "드로다운",
+      "컨티뉴에이션 펀드",
+      "세컨더리",
+      "GP커밋",
+      "LP",
+      "IRR",
+      "MOIC"
     ],
     "부동산/리츠": [
-      "오피스 딜", "물류센터 매입", "리츠 상장", "리츠 인수", "롯데리츠", "신한서부티엔디리츠",
-      "NH올원리츠", "이지스자산운용", "마스턴투자운용", "코람코자산신탁", "자산유동화", "PF-ABS"
+      "오피스 공실률",
+      "임대료",
+      "캡레이트",
+      "DSCR",
+      "LTV",
+      "자본확충",
+      "리츠 상장",
+      "리츠 인수",
+      "자산유동화",
+      "PF-ABS",
+      "브릿지론",
+      "재임대"
     ],
     "인프라/에너지": [
-      "해상풍력", "태양광", "ESS", "연료전지", "수소충전소", "열병합", "송배전",
-      "PPA", "RE100", "REC", "민자발전", "민자 집단에너지", "장기전력구매계약"
+      "PPA",
+      "SMP",
+      "REC",
+      "가동률",
+      "전력수요",
+      "송배전",
+      "계통연계",
+      "DSCR",
+      "O&M",
+      "민원",
+      "지연",
+      "보증이행"
     ],
     "데이터센터/통신": [
-      "데이터센터", "IDC", "하이퍼스케일 DC", "코로케이션", "다크파이버", "해저케이블",
-      "엣지 데이터센터", "백본망", "캐리어 호텔"
+      "코로케이션",
+      "전력공급",
+      "전력단가",
+      "가동률",
+      "Anchor Tenant",
+      "LTA",
+      "CapEx",
+      "하이퍼스케일"
     ],
     "물류/항만": [
-      "항만터미널", "컨세션", "민자SOC", "택배허브", "콜드체인", "리퍼터미널", "ICD",
-      "철도물류", "복합물류센터", "FTZ"
+      "터미널",
+      "컨세션",
+      "처리량",
+      "슬롯",
+      "ICD",
+      "콜드체인"
     ],
     "환경/폐기물/수처리": [
-      "소각장", "매립", "SRF", "MBT", "바이오가스", "하수처리", "상수도", "스마트미터",
-      "에코타운", "자원순환"
+      "소각장",
+      "매립",
+      "SRF",
+      "MBT",
+      "처리단가",
+      "민원"
     ],
     "SOC/민자": [
-      "BTO", "BTL", "PPP", "PFI", "컨세션", "운영권 양수", "MRG", "수익공유", "리파이낸싱"
+      "BTO",
+      "BTL",
+      "PPP",
+      "PFI",
+      "MRG",
+      "수익공유",
+      "운영권 양수"
     ],
     "항공/공항/철도": [
-      "공항터미널", "면세점 운영권", "공항 도시가스", "공항 수전", "철도역세권 개발",
-      "리스백", "슬롯", "공항 민영화"
+      "슬롯",
+      "면세점 운영권",
+      "여객수요",
+      "민영화",
+      "수전",
+      "도시가스"
     ],
     "해외대체": [
-      "미국 데이터센터", "유럽 항만", "영국 오피스", "호주 요금규제자산", "유럽 재생에너지",
-      "브라질 송전", "중동 수소", "동남아 물류"
+      "미국 데이터센터",
+      "유럽 항만",
+      "영국 오피스",
+      "호주 규제자산",
+      "브라질 송전",
+      "중동 수소",
+      "동남아 물류"
     ],
     "연기금/LP": [
-      "국민연금 대체", "사학연금 대체", "공무원연금 대체",
-      "우정본부 대체", "행복기금 대체", "KIC 대체", "대학기금 대체"
+      "커밋먼트",
+      "클로징",
+      "리캡",
+      "사이드레터",
+      "세컨더리"
     ]
   },
-   "synonym_map": {
-    "해상풍력": ["오프쇼어풍력", "해상풍력발전", "Offshore wind"],
-    "태양광": ["PV", "Solar PV", "포토볼타익"],
-    "데이터센터": ["IDC", "DC", "하이퍼스케일 데이터센터"],
-    "민자": ["PPP", "PFI", "BTO", "BTL", "Concession", "컨세션"],
-    "리파이낸싱": ["Refinancing", "재원재조달"],
-    "유동화": ["ABS", "ABCP", "PF-ABS", "자산유동화"],
-    "셀다운": ["Stake sale", "지분매각"],
-    "연료전지": ["Fuel cell"],
-    "열병합": ["CHP"],
-    "송배전": ["Transmission", "Distribution"],
-    "콜드체인": ["저온물류", "Cold chain"]
-  },
-"common_filter_categories": {
-  "대체_거래/조달": [
-    "인수", "매각", "셀다운", "공동투자", "컨소시엄", "리파이낸싱",
-    "프로젝트 파이낸싱", "브릿지론", "클로징", "터미시트", "LOI", "우선협상대상자"
-  ],
-  "대체_운영/리스크": [
-    "DSCR", "트래픽", "가동률", "이용률", "PPA", "REC", "SMP",
-    "민원", "공사 중지", "지연", "공사비 상승", "유지보수", "보증이행", "변전소", "계통연계"
-  ],
-  "대체_정책/규제": [
-    "규제", "정책 변경", "요금 규제", "허가", "인가", "컨세션", "민자",
-    "환경영향평가", "송전선로", "입지", "세액공제", "보조금", "RE100"
-  ],
-  "대체_펀드레이징/LP": [
-    "펀드 결성", "펀드 클로징", "커밋먼트", "LP", "GP", "세컨더리",
-    "컨티뉴에이션 펀드", "리캡", "드로다운", "리미티드파트너", "사이드레터"
-  ],
-  "대체_리스크이벤트": [
-    "소송", "규제위반", "민형사", "허가 취소", "보증사고", "부실",
-    "회수 지연", "연체", "채무불이행", "계약해지", "환매요청"
-  ]
-},
-  "industry_filter_categories": {
-    "은행 및 금융지주": [
-      "경영실태평가", "BIS", "CET1", "자본비율", "상각형 조건부자본증권", "자본확충", "자본여력", "자본적정성", "LCR",
-      "조달금리", "NIM", "순이자마진", "고정이하여신비율", "대손충당금", "충당금", "부실채권", "연체율", "가계대출", "취약차주"
+  "synonym_map": {
+    "해상풍력": [
+      "오프쇼어풍력",
+      "해상풍력발전",
+      "Offshore wind"
     ],
-    "보험사": [
-      "보장성보험", "저축성보험", "변액보험", "퇴직연금", "일반보험", "자동차보험", "ALM", "지급여력비율", "K-ICS",
-      "보험수익성", "보험손익", "수입보험료", "CSM", "상각", "투자손익", "운용성과", "IFRS4", "IFRS17", "보험부채",
-      "장기선도금리", "최종관찰만기", "유동성 프리미엄", "신종자본증권", "후순위채", "위험자산비중", "가중부실자산비율"
+    "태양광": [
+      "PV",
+      "Solar PV",
+      "포토볼타익"
     ],
-    "카드사": [
-      "민간소비지표", "대손준비금", "가계부채", "연체율", "가맹점카드수수료", "대출성자산", "신용판매자산", "고정이하여신", "레버리지배율",
-      "건전성", "케이뱅크", "이탈"
+    "데이터센터": [
+      "IDC",
+      "DC",
+      "하이퍼스케일 데이터센터"
     ],
-    "캐피탈": [
-      "충당금커버리지비율", "고정이하여신", "PF구조조정", "리스자산", "손실흡수능력", "부동산PF연체채권", "자산포트폴리오", "건전성",
-      "조정총자산수익률", "군인공제회"
+    "민자": [
+      "PPP",
+      "PFI",
+      "BTO",
+      "BTL",
+      "Concession",
+      "컨세션"
     ],
-    "지주사": [
-      "SK지오센트릭", "SK에너지", "SK엔무브", "SK인천석유화학", "GS칼텍스", "GS파워", "SK이노베이션", "SK텔레콤", "SK온",
-      "GS에너지", "GS리테일", "GS E&C", "2차전지", "석유화학", "윤활유", "전기차", "배터리", "정유", "이동통신"
+    "리파이낸싱": [
+      "Refinancing",
+      "재원재조달"
     ],
-    "에너지": [
-      "정유", "유가", "정제마진", "스프레드", "가동률", "재고 손실", "중국 수요", "IMO 규제", "저유황 연료", "LNG",
-      "터미널", "윤활유"
+    "유동화": [
+      "ABS",
+      "ABCP",
+      "PF-ABS",
+      "자산유동화"
     ],
-    "발전": [
-      "LNG", "천연가스", "유가", "SMP", "REC", "계통시장", "탄소세", "탄소배출권", "전력시장 개편", "전력 자율화",
-      "가동률", "도시가스"
+    "셀다운": [
+      "Stake sale",
+      "지분매각"
     ],
-    "자동차": [
-      "AMPC 보조금", "IRA 인센티브", "중국 배터리", "EV 수요", "전기차", "ESS수요", "리튬", "타이어"
+    "연료전지": [
+      "Fuel cell"
     ],
-    "전기전자": [
-      "CHIPS 보조금", "중국", "DRAM", "HBM", "광할솔루션", "아이폰", "HVAC", "HVTR"
+    "열병합": [
+      "CHP"
     ],
-    "철강": [
-      "철광석", "후판", "강판", "철근", "스프레드", "철강", "가동률", "제철소", "셧다운", "중국산 저가",
-      "중국 수출 감소", "건설경기", "조선 수요", "파업"
+    "송배전": [
+      "Transmission",
+      "Distribution"
     ],
-    "비철": [
-      "연", "아연", "니켈", "안티모니", "경영권 분쟁", "MBK", "영풍"
-    ],
-    "소매": [
-      "내수부진", "시장지배력", "SK텔레콤", "SK매직", "CLS", "HMR", "라이신", "아미노산", "슈완스컴퍼니",
-      "의류", "신세계", "대형마트 의무휴업", "G마켓", "W컨셉", "스타필드"
-    ],
-    "석유화학": [
-      "석유화학", "석화", "유가", "증설", "스프레드", "가동률", "PX", "벤젠", "중국 증설", "중동 COTC",
-      "LG에너지솔루션", "전기차", "배터리", "리튬", "IRA", "AMPC", "NCC"
-    ],
-    "건설": [
-      "철근 가격", "시멘트 가격", "공사비", "SOC 예산", "도시정비 지원", "우발채무", "수주", "주간사", "사고",
-      "시공능력순위", "미분양", "대손충당금"
-    ],
-    "특수채": [
-      "자본확충", "HUG", "전세사기", "보증사고", "보증료율", "회수율", "보증잔액", "대위변제액",
-      "중소기업대출", "대손충당금", "부실채권", "불법", "구속", "주택임대차보호법"
+    "콜드체인": [
+      "저온물류",
+      "Cold chain"
     ]
   },
-  "favorite_to_industry_major": {
-    "PE/VC": ["대체_거래/조달", "대체_펀드레이징"],
-    "부동산/리츠": ["대체_거래/조달", "대체_운영/리스크"],
-    "인프라/에너지": ["대체_거래/조달", "대체_운영/리스크", "대체_정책/규제"],
-    "데이터센터/통신": ["대체_거래/조달", "대체_운영/리스크"],
-    "물류/항만": ["대체_거래/조달", "대체_운영/리스크"],
-    "환경/폐기물/수처리": ["대체_거래/조달", "대체_운영/리스크", "대체_정책/규제"],
-    "SOC/민자": ["대체_거래/조달", "대체_정책/규제"],
-    "항공/공항/철도": ["대체_거래/조달", "대체_운영/리스크"],
-    "해외대체": ["대체_거래/조달", "대체_운영/리스크"],
-    "연기금/LP": ["대체_펀드레이징", "대체_정책/규제"]
+  "common_filter_categories": {
+    "대체_거래/조달": [
+      "인수",
+      "매각",
+      "셀다운",
+      "공동투자",
+      "컨소시엄",
+      "리파이낸싱",
+      "프로젝트 파이낸싱",
+      "브릿지론",
+      "클로징",
+      "터미시트",
+      "LOI",
+      "우선협상대상자"
+    ],
+    "대체_운영/리스크": [
+      "DSCR",
+      "트래픽",
+      "가동률",
+      "이용률",
+      "PPA",
+      "REC",
+      "SMP",
+      "민원",
+      "지연",
+      "공사비 상승",
+      "유지보수",
+      "보증이행",
+      "계통연계"
+    ],
+    "대체_정책/규제": [
+      "규제",
+      "정책 변경",
+      "요금 규제",
+      "허가",
+      "인가",
+      "컨세션",
+      "민자",
+      "환경영향평가",
+      "송전선로",
+      "입지",
+      "세액공제",
+      "보조금",
+      "RE100"
+    ],
+    "대체_펀드레이징/LP": [
+      "펀드 결성",
+      "펀드 클로징",
+      "커밋먼트",
+      "LP",
+      "GP",
+      "세컨더리",
+      "컨티뉴에이션 펀드",
+      "리캡",
+      "드로다운",
+      "사이드레터"
+    ],
+    "대체_리스크이벤트": [
+      "소송",
+      "규제위반",
+      "민형사",
+      "허가 취소",
+      "보증사고",
+      "부실",
+      "회수 지연",
+      "연체",
+      "채무불이행",
+      "계약해지",
+      "환매요청"
+    ]
   }
 }
